#6997 button z-index issue for video+form

--- a/public/less/ssb-site-builder/ssb-components/ssb-form-donate.less
+++ b/public/less/ssb-site-builder/ssb-components/ssb-form-donate.less
@@ -29,8 +29,10 @@
         white-space: inherit;
     }
     .btn-form{
-        z-index: 2 !important;
+        z-index: 2!important;
     }
+    position: relative;
+    z-index: 2!important;
 }
 /**
  * Modal styles
